Remove frontend and expose backend timeline
